# acl

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/uu/chacl/: Cargo.toml  chacl.md
src/uu/chacl/src/: chacl.rs  main.rs
src/uu/getfacl/: Cargo.toml  getfacl.md
src/uu/getfacl/src/: getfacl.rs  main.rs
src/uu/setfacl/: Cargo.toml  setfacl.md
src/uu/setfacl/src/: main.rs  setfacl.rs
tests/: tests.rs
tests/by-util/: test_chacl.rs  test_getfacl.rs  test_setfacl.rs
tests/common/: macros.rs  mod.rs  random.rs  util.rs
