# acl (uutils)
# * see the repository LICENSE, README, and CONTRIBUTING files for more information

# spell-checker:ignore (libs) bigdecimal datetime fundu gethostid kqueue libselinux mangen memmap procfs uuhelp

[workspace.package]
version = "0.0.1"
authors = ["uutils developers"]
license = "MIT"
edition = "2024"

homepage = "https://github.com/uutils/acl"
keywords = ["acl", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]

[package]
name = "acl"
description = "acl ~ GNU acl; implemented as universal (cross-platform) utils, written in Rust"
default-run = "acl"
repository = "https://github.com/uutils/acl"
readme = "README.md"

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

homepage.workspace = true
keywords.workspace = true
categories.workspace = true

build = "build.rs"

[features]
default = ["feat_common_core"]
uudoc = []

feat_common_core = [
  "chacl",
  "getfacl",
  "setfacl",
]

[workspace.dependencies]
clap = { version = "4.5.4", features = ["wrap_help", "cargo"] }
clap_complete = "4.5.2"
clap_mangen = "0.2.20"
libc = "0.2.154"
phf = "0.11.2"
phf_codegen = "0.11.2"
regex = "1.10.4"
tempfile = "3.10.1"
textwrap = { version = "0.16.1", features = ["terminal_size"] }
utmpx = "0.2"
uucore = "0.0.30"
uutests = "0.0.30"
uzers = "0.12"
xattr = "1.3.1"

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
phf = { workspace = true }
textwrap = { workspace = true }
uucore = { workspace = true }
uzers = { workspace = true }
xattr = { workspace = true }


#
chacl = { optional = true, version = "0.0.1", package = "uu_chacl", path = "src/uu/chacl" }
getfacl = { optional = true, version = "0.0.1", package = "uu_getfacl", path = "src/uu/getfacl" }
setfacl = { optional = true, version = "0.0.1", package = "uu_setfacl", path = "src/uu/setfacl" }

[dev-dependencies]
ctor = "0.4.1"
libc = { workspace = true }
pretty_assertions = "1.4.0"
regex = { workspace = true }
tempfile = { workspace = true }
uucore = { workspace = true, features = ["entries", "process", "signals"] }
uutests = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
xattr = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dev-dependencies]
procfs = { version = "0.17", default-features = false }
rlimit = "0.10.1"

[build-dependencies]
phf_codegen = { workspace = true }


[[bin]]
name = "acl"
path = "src/bin/acl.rs"

[[bin]]
name = "uudoc"
path = "src/bin/uudoc.rs"
required-features = ["uudoc"]

# The default release profile. It contains all optimizations, without
# sacrificing debug info. With this profile (like in the standard
# release profile), the debug info and the stack traces will still be available.
[profile.release]
lto = true

# A release-like profile that is tuned to be fast, even when being fast
# compromises on binary size. This includes aborting on panic.
[profile.release-fast]
inherits = "release"
panic = "abort"

# A release-like profile that is as small as possible.
[profile.release-small]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = true
