[package]
name = "uu_chacl"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uucore = { workspace = true }
clap = { workspace = true }

[lib]
path = "src/chacl.rs"

[[bin]]
name = "chacl"
path = "src/main.rs"
