[package]
name = "uu_chacl"
version = "0.0.1"
edition = "2021"
authors = ["uutils developers"]
license = "MIT"
description = "chacl ~ (uutils) Change the access control list of a file or directory"

homepage = "https://github.com/uutils/acl"
repository = "https://github.com/uutils/acl/tree/main/src/uu/chacl"
keywords = ["acl", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]

[dependencies]
uucore = { workspace = true }
clap = { workspace = true }

[lib]
path = "src/chacl.rs"

[[bin]]
name = "chacl"
path = "src/main.rs"
