[package]
name = "uu_chacl"
description = "chacl ~ (uutils) Change the access control list of a file or directory"
repository = "https://github.com/uutils/acl/tree/main/src/uu/chacl"

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
uucore = { workspace = true }
clap = { workspace = true }

[lib]
path = "src/chacl.rs"

[[bin]]
name = "chacl"
path = "src/main.rs"
