[package]
name = "uu_getfacl"
version = "0.0.1"
authors = ["uutils developers"]
license = "MIT"
description = "getfacl ~ (uutils) Get file access control lists"

homepage = "https://github.com/uutils/acl"
repository = "https://github.com/uutils/acl/tree/main/src/uu/setfacl"
keywords = ["acl", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
uucore = { workspace = true }
clap = { workspace = true }
xattr = { workspace = true }
uzers = { workspace = true }

[lib]
path = "src/getfacl.rs"

[[bin]]
name = "getfacl"
path = "src/main.rs"
