[package]
name = "uu_getfacl"
description = "getfacl ~ (uutils) Get file access control lists"
repository = "https://github.com/uutils/acl/tree/main/src/uu/setfacl"

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
uucore = { workspace = true }
clap = { workspace = true }
xattr = { workspace = true }
uzers = { workspace = true }

[lib]
path = "src/getfacl.rs"

[[bin]]
name = "getfacl"
path = "src/main.rs"
