[package]
name = "uu_setfacl"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uucore = { workspace = true }
clap = { workspace = true }

[lib]
path = "src/setfacl.rs"

[[bin]]
name = "setfacl"
path = "src/main.rs"
