[package]
name = "uu_setfacl"
version = "0.0.1"
authors = ["uutils developers"]
license = "MIT"
description = "setfacl ~ (uutils) Set file access control lists"

homepage = "https://github.com/uutils/acl"
repository = "https://github.com/uutils/acl/tree/main/src/uu/setfacl"
keywords = ["acl", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]
edition = "2024"

[dependencies]
uucore = { workspace = true }
clap = { workspace = true }

[lib]
path = "src/setfacl.rs"

[[bin]]
name = "setfacl"
path = "src/main.rs"
