[package]
name = "uu_setfacl"
description = "setfacl ~ (uutils) Set file access control lists"
repository = "https://github.com/uutils/acl/tree/main/src/uu/setfacl"

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
uucore = { workspace = true }
clap = { workspace = true }

[lib]
path = "src/setfacl.rs"

[[bin]]
name = "setfacl"
path = "src/main.rs"
